[package]
name = "bsky-firehose-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.31"
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
native-tls = "0.2.12"
serde_ipld_dagcbor = "0.6.1"
ipld-core = "0.4.1"
atrium-api = "0.24.6"
rs-car = "0.4.1"
serde_json = "1.0.133"
whatlang = "0.16.4"
syllable = "0.1.0"
syllarust = "0.1.1"
